make png photos visible

--- a/public/BoltMapsUpdate.ipynb
+++ b/public/BoltMapsUpdate.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "|`user_ratings_total`|`current_opening_hours & populartimes`|Demand|\n",
     "|:---:|:---:|:---:|\n",
-    "|![](user_ratings_total.PNG)|![](populartimes.PNG)|![](demand.PNG)|"
+    "|![](user_ratings_total.png)|![](populartimes.png)|![](demand.png)|"
    ]
   },
   {
