Make access to html maps, fix not working urls

--- a/public/BoltMapsUpdate3.ipynb
+++ b/public/BoltMapsUpdate3.ipynb
@@ -7,7 +7,7 @@
     "## 2023-01-05\n",
     "Įkeltas žemėlapis, atvaizduojantis >700 aktyvių Bolt restoranų pagal Google balsų skaičių.\n",
     "\n",
-    "Žemėlapis [pasiekiamas čia](bolt_restaurants_vilnius.html)\n",
+    "Žemėlapis [pasiekiamas čia](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/bolt_restaurants_vilnius.html)\n",
     "\n",
     "Žemėlapis sugeneruotas imant restoranų sąrašą iš [Bolt Food Website](https://food.bolt.eu/lt-LT/9-vilnius) ir pagal juos automatiškai generuojant Google paieškų informaciją (darbo laikus, adresus ir Google balsų skaičius).  Naudota ribota [Google Places API](https://medium.com/swlh/google-maps-places-api-28b8fdf28082) prieiga, gauta per [Google Cloud](https://console.cloud.google.com/) platformą.\n",
     "\n",
