Upload maps of 40zkz historical data

--- a/public/BoltMapsUpdate3.ipynb
+++ b/public/BoltMapsUpdate3.ipynb
@@ -4,23 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2023-01-05\n",
-    "Įkeltas žemėlapis, atvaizduojantis >700 aktyvių Bolt restoranų pagal Google balsų skaičių.\n",
-    "\n",
-    "Žemėlapis [pasiekiamas čia](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/bolt_restaurants_vilnius.html)\n",
-    "\n",
-    "Žemėlapis sugeneruotas imant restoranų sąrašą iš [Bolt Food Website](https://food.bolt.eu/lt-LT/9-vilnius) ir pagal juos automatiškai generuojant Google paieškų informaciją (darbo laikus, adresus ir Google balsų skaičius).  Naudota ribota [Google Places API](https://medium.com/swlh/google-maps-places-api-28b8fdf28082) prieiga, gauta per [Google Cloud](https://console.cloud.google.com/) platformą.\n",
-    "\n",
-    "* Skritulių dydis atitinka vartotojų reitingų skaičiui (VOTES)\n",
-    "* Žalia spalva rodo, kad darbo laikas ir adresas 100% teisingas, nes buvo sutikrintas su Bolt Food programėle.\n",
-    "* Restoranai, neturintys darbo laikų ir adresų nerodomi.\n",
-    "\n",
-    "#### Duomenys tik apytiksliai. Iki geresnio tikslumo trūksta:\n",
-    "* Sužiūrėti 90% vietų adresus ir darbo laikus pagal Bolt Food programėlę\n",
-    "* Įtraukti dar apie 5% vietų, kurioms Google neranda darbo laikų ar adresų\n",
-    "* Google balsų skaičių pakeisti kitu indikatoriumi, tiksliau parodančiu realų Bolt užsakymų intensyvumą.\n",
-    "  * Pvz. degalinės, Narvesen kioskai ir kai kurie McDonaldai turi daug balsų, bet užsakymų iš jų beveik nėra.\n",
-    "  * Pvz. Bolt Marketai turi mažai balsų, nors yra labai aktyvūs"
+    "### 2023-01-11\n",
+    "Laikinai prisegu pirmųjų 40 užsakymų istorijas:\n",
+    "* [Viso laiko](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/main_map1.html)\n",
+    "* [Nuo 17 val.](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/main_map2.html)"
    ]
   },
   {
@@ -205,6 +192,29 @@
     " | [21:00](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/RestaurantActivityMaps/Sun/Sun%202100.html)\n",
     " | [22:00](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/RestaurantActivityMaps/Sun/Sun%202200.html)\n",
     " | [23:00](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/RestaurantActivityMaps/Sun/Sun%202300.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2023-01-05\n",
+    "Įkeltas žemėlapis, atvaizduojantis >700 aktyvių Bolt restoranų pagal Google balsų skaičių.\n",
+    "\n",
+    "Žemėlapis [pasiekiamas čia](https://nbviewer.org/github/loijord/courier_colab/blob/master/public/bolt_restaurants_vilnius.html)\n",
+    "\n",
+    "Žemėlapis sugeneruotas imant restoranų sąrašą iš [Bolt Food Website](https://food.bolt.eu/lt-LT/9-vilnius) ir pagal juos automatiškai generuojant Google paieškų informaciją (darbo laikus, adresus ir Google balsų skaičius).  Naudota ribota [Google Places API](https://medium.com/swlh/google-maps-places-api-28b8fdf28082) prieiga, gauta per [Google Cloud](https://console.cloud.google.com/) platformą.\n",
+    "\n",
+    "* Skritulių dydis atitinka vartotojų reitingų skaičiui (VOTES)\n",
+    "* Žalia spalva rodo, kad darbo laikas ir adresas 100% teisingas, nes buvo sutikrintas su Bolt Food programėle.\n",
+    "* Restoranai, neturintys darbo laikų ir adresų nerodomi.\n",
+    "\n",
+    "#### Duomenys tik apytiksliai. Iki geresnio tikslumo trūksta:\n",
+    "* Sužiūrėti 90% vietų adresus ir darbo laikus pagal Bolt Food programėlę\n",
+    "* Įtraukti dar apie 5% vietų, kurioms Google neranda darbo laikų ar adresų\n",
+    "* Google balsų skaičių pakeisti kitu indikatoriumi, tiksliau parodančiu realų Bolt užsakymų intensyvumą.\n",
+    "  * Pvz. degalinės, Narvesen kioskai ir kai kurie McDonaldai turi daug balsų, bet užsakymų iš jų beveik nėra.\n",
+    "  * Pvz. Bolt Marketai turi mažai balsų, nors yra labai aktyvūs"
    ]
   },
   {
