a test for mobile phone use (map animation feature & locator feature)

--- a/folium_mapping2/experimental_feature.ipynb
+++ b/folium_mapping2/experimental_feature.ipynb
@@ -9,7 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_route_map(route_map, file_name):\n",
+    "    print('CREATE:', file_name)\n",
+    "    route_map.save(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +53,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_1d936fc9724e64acdae4e4c31489bb03 {\n",
+       "                #map_e9a9fa95f5409c394ba0222e3e9c7cec {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -65,14 +76,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_1d936fc9724e64acdae4e4c31489bb03&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_e9a9fa95f5409c394ba0222e3e9c7cec&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_1d936fc9724e64acdae4e4c31489bb03 = L.map(\n",
-       "                &quot;map_1d936fc9724e64acdae4e4c31489bb03&quot;,\n",
+       "            var map_e9a9fa95f5409c394ba0222e3e9c7cec = L.map(\n",
+       "                &quot;map_e9a9fa95f5409c394ba0222e3e9c7cec&quot;,\n",
        "                {\n",
        "                    center: [51.467697, -2.548828],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -86,10 +97,10 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_1c6cfb14e68de46df1c05e0ff90f796b = L.tileLayer(\n",
+       "            var tile_layer_f1c3b48cf579268b2add764436b93f2d = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_1d936fc9724e64acdae4e4c31489bb03);\n",
+       "            ).addTo(map_e9a9fa95f5409c394ba0222e3e9c7cec);\n",
        "        \n",
        "    \n",
        "            L.Control.TimeDimensionCustom = L.Control.TimeDimension.extend({\n",
@@ -99,7 +110,7 @@
        "                    return newdate.format(&quot;hh:mm&quot;);\n",
        "                }\n",
        "            });\n",
-       "            map_1d936fc9724e64acdae4e4c31489bb03.timeDimension = L.timeDimension(\n",
+       "            map_e9a9fa95f5409c394ba0222e3e9c7cec.timeDimension = L.timeDimension(\n",
        "                {\n",
        "                    period: &quot;PT1H&quot;,\n",
        "                }\n",
@@ -107,7 +118,7 @@
        "            var timeDimensionControl = new L.Control.TimeDimensionCustom(\n",
        "                {&quot;autoPlay&quot;: false, &quot;loopButton&quot;: true, &quot;maxSpeed&quot;: 1, &quot;minSpeed&quot;: 0.1, &quot;playerOptions&quot;: {&quot;loop&quot;: false, &quot;startOver&quot;: true, &quot;transitionTime&quot;: 200}, &quot;position&quot;: &quot;bottomleft&quot;, &quot;speedSlider&quot;: true, &quot;timeSliderDragUpdate&quot;: true}\n",
        "            );\n",
-       "            map_1d936fc9724e64acdae4e4c31489bb03.addControl(this.timeDimensionControl);\n",
+       "            map_e9a9fa95f5409c394ba0222e3e9c7cec.addControl(this.timeDimensionControl);\n",
        "\n",
        "            var geoJsonLayer = L.geoJson({&quot;type&quot;: &quot;FeatureCollection&quot;, &quot;features&quot;: [{&quot;type&quot;: &quot;Feature&quot;, &quot;geometry&quot;: {&quot;type&quot;: &quot;Point&quot;, &quot;coordinates&quot;: [25.282656, 54.677851]}, &quot;properties&quot;: {&quot;time&quot;: &quot;2017-10-03 01:00&quot;, &quot;tooltip&quot;: &quot;hi world&quot;, &quot;id&quot;: &quot;house0&quot;, &quot;icon&quot;: &quot;circle&quot;, &quot;iconstyle&quot;: {&quot;fillColor&quot;: &quot;green&quot;, &quot;fillOpacity&quot;: 0.6, &quot;stroke&quot;: &quot;true&quot;, &quot;radius&quot;: 7}}}, {&quot;type&quot;: &quot;Feature&quot;, &quot;geometry&quot;: {&quot;type&quot;: &quot;Point&quot;, &quot;coordinates&quot;: [25.2553013, 54.6778603]}, &quot;properties&quot;: {&quot;time&quot;: &quot;2017-10-03 02:00&quot;, &quot;tooltip&quot;: &quot;hi world again&quot;, &quot;id&quot;: &quot;house1&quot;, &quot;icon&quot;: &quot;circle&quot;, &quot;iconstyle&quot;: {&quot;fillColor&quot;: &quot;green&quot;, &quot;fillOpacity&quot;: 0.6, &quot;stroke&quot;: &quot;true&quot;, &quot;radius&quot;: 7}}}, {&quot;type&quot;: &quot;Feature&quot;, &quot;geometry&quot;: {&quot;type&quot;: &quot;Point&quot;, &quot;coordinates&quot;: [25.2760565, 54.6940226]}, &quot;properties&quot;: {&quot;time&quot;: &quot;2017-10-03 03:00&quot;, &quot;tooltip&quot;: &quot;hi world aa&quot;, &quot;id&quot;: &quot;house2&quot;, &quot;icon&quot;: &quot;circle&quot;, &quot;iconstyle&quot;: {&quot;fillColor&quot;: &quot;green&quot;, &quot;fillOpacity&quot;: 0.6, &quot;stroke&quot;: &quot;true&quot;, &quot;radius&quot;: 7}}}, {&quot;type&quot;: &quot;Feature&quot;, &quot;geometry&quot;: {&quot;type&quot;: &quot;Point&quot;, &quot;coordinates&quot;: [25.2746094, 54.73978779999999]}, &quot;properties&quot;: {&quot;time&quot;: &quot;2017-10-03 04:00&quot;, &quot;tooltip&quot;: &quot;hi world kk&quot;, &quot;id&quot;: &quot;house3&quot;, &quot;icon&quot;: &quot;circle&quot;, &quot;iconstyle&quot;: {&quot;fillColor&quot;: &quot;green&quot;, &quot;fillOpacity&quot;: 0.6, &quot;stroke&quot;: &quot;true&quot;, &quot;radius&quot;: 7}}}]}, {\n",
        "                    pointToLayer: function (feature, latLng) {\n",
@@ -143,31 +154,31 @@
        "                    }\n",
        "                })\n",
        "\n",
-       "            var timestamped_geo_json_0452f7842353d88075fe64fc13f8d14f = L.timeDimension.layer.geoJson(\n",
+       "            var timestamped_geo_json_c766706e4ba0a94272136dc3f3bbeb8d = L.timeDimension.layer.geoJson(\n",
        "                geoJsonLayer,\n",
        "                {\n",
        "                    updateTimeDimension: true,\n",
        "                    addlastPoint: true,\n",
        "                    duration: &quot;PT0H&quot;,\n",
        "                }\n",
-       "            ).addTo(map_1d936fc9724e64acdae4e4c31489bb03);\n",
+       "            ).addTo(map_e9a9fa95f5409c394ba0222e3e9c7cec);\n",
        "        \n",
        "    \n",
-       "            var locate_control_1f38801a66b8cc2402e3f48170b23c09 = L.control.locate(\n",
+       "            var locate_control_05ed711f6bc6d09ae05ea71a591860fd = L.control.locate(\n",
        "                {}\n",
-       "            ).addTo(map_1d936fc9724e64acdae4e4c31489bb03);\n",
+       "            ).addTo(map_e9a9fa95f5409c394ba0222e3e9c7cec);\n",
        "            \n",
-       "                locate_control_1f38801a66b8cc2402e3f48170b23c09.start();\n",
+       "                locate_control_05ed711f6bc6d09ae05ea71a591860fd.start();\n",
        "            \n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1a8161d3af0>"
+       "<folium.folium.Map at 0x1a816537250>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +237,25 @@
     ").add_to(m)\n",
     "\n",
     "plugins.LocateControl(auto_start=True).add_to(m)\n",
-    "m"
+    "m\n",
+    "#the render of straight notebook via nbviewer is terrible on phone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATE: test.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_route_map(m, 'test.html')"
    ]
   },
   {
