new updates for animated maps and making restaurant data open

--- a/public/BoltMapsUpdate3.ipynb
+++ b/public/BoltMapsUpdate3.ipynb
@@ -27,7 +27,6 @@
     "* Pilkas grafikas reiškia, kad Google neturi duomenų apie tos vietos užimtumą, todėl imamas visų vietų išvidurkintas variantas.\n",
     "* Žaliai pažymėtos vietos, kurių darbo laikas ir koordinatės patikslintos pagal Bolt Food programėlę.\n",
     "* Mėlynai pažymėtos vietos kol kas dar nepatikslintos, gali būti netikslumų.\n",
-    "* Kiekvieno skritulio spindulys \n",
     "\n",
     "### Netikslumai\n",
     "* Degalinės, Narvesen kioskai ir Gedo McDonalds balsų skaičius didelis, bet užsakymų iš jų yra mažai.\n",
@@ -45,7 +44,7 @@
     "### Atviri duomenys\n",
     "* Restoranų sąrašas iš [Bool Food Website](https://food.bolt.eu/lt-LT/9-vilnius): [`bolt_restaurants.txt`](bolt_restaurants.txt)\n",
     "* Google duomenys per [Google Places API](https://medium.com/swlh/google-maps-places-api-28b8fdf28082) prieigą: [`bolt_restaurants_vilnius.txt`](bolt_restaurants_vilnius.txt)\n",
-    "* Užimtumo duomenys (source: `https://github.com/m-wrzr/populartimes`): [`popular_times.npz`](`popular_times.npz`)\n",
+    "* Užimtumo duomenys (source: `https://github.com/m-wrzr/populartimes`): [`popular_times.npz`](popular_times.npz)\n",
     "\n",
     "----------------------------------------"
    ]
