Better content display for Besisvaiginančio kurjerio užrašai

--- a/journey_remarks/2023_04_14.ipynb
+++ b/journey_remarks/2023_04_14.ipynb
@@ -187,6 +187,7 @@
     "23:30 - bevažiuojant autu daeina mintis iki smegeninės, kad skolingas gaidį Adaptų Ir Daunų & co šaikai esu.  \n",
     "\n",
     "23:34 - intikas autike buvo, tai tik dėl to ir pavyko iš savo kompo gaidį įkelti likus 10 sekundžių iki stotelės.  \n",
+    "<img src=\"videos/g.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/>\n",
     "\n",
     "23:35 - joks zakazas vapše nekrenta - feilas žodžiu visiškas. Stoviu kaip debilas stotelėj. Autas pirmas gie iki centro tik už 4 min atvaro.\n",
     "\n",
