fix issues of video upload (in besisvaiginančio kurjerio užrašai) in production version of the main project

--- a/journey_remarks/2023_04_14.ipynb
+++ b/journey_remarks/2023_04_14.ipynb
@@ -49,23 +49,23 @@
     "\n",
     "10:04 - zakazas įkrenta. Pradės daužyt juos dabar bilenkaip. Varom!  \n",
     "\n",
-    "[10:12](videos/r1.mp4) - Loftoranas - achujiena valgykla Vilniaus kolegijos diplomų kalvėj.  \n",
-    "<video controls src=\"videos/r1.mp4\"/>\n",
+    "[10:12](./videos/r1.mp4) - Loftoranas - achujiena valgykla Vilniaus kolegijos diplomų kalvėj.  \n",
+    "<video controls src=\"./videos/r1.mp4\"/>\n",
     "\n",
     "10:14 - appsai. Orų radaras rodo, kad tuoj teks maudytis, o mano pakurti mappsai rodo, kad nereikt tikėtis zakazų vienoj Naujamiesčio vietoj. Vėliau paaiškėjo, kad mappsai buvo teisūs. Dėl lietaus - tuoj bus matyti.  \n",
     "\n",
     "\n",
     "<table><tr>\n",
-    "<td> <img src=\"videos/m1.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
-    "<td> <img src=\"videos/m2.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "<td> <img src=\"./videos/m1.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
+    "<td> <img src=\"./videos/m2.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/> </td>\n",
     "</tr></table>\n",
     "\n",
     "10:25 - Kad nukirst kažkokį tai kampą nusprendžiu ekstremalų sportą išbandyti. Paraginu savo arklį judėti link amžiną atilsį Cvirkos ir dedu nuo stataus kalno kaip kokiuose senuose miniklipiniuose Mountain bike trials geimuose.\n",
     "\n",
     "10:30 - Atvarau į Eat More Chinese Downtonhale. Vėl ta pati babcė už prekystalio, kur dvigubai sulėtintais judesiais dirba ir nuolat vėluoja zakazus padaryt per piko metą. Šįsyk pasisekė, nereikėjo laukti. Bet ta smarvė, kuri trenkia nuo jų prekystalio vienintelio visam Downtonhale, verta atskiro paminėjimo. Neužsisakinėkit iš ten maisto tiesiog.  \n",
     "\n",
-    "[10:34](videos/r2.mp4) - Pažintinė ekskursija nuo Baltojo tilto iki skaityk Narautų. Soriukas, vėjas nupūtė žodžius, kai lėkiau pro tiltą ant 35.  \n",
-    "<video controls src=\"videos/r2.mp4\"/>\n",
+    "[10:34](./videos/r2.mp4) - Pažintinė ekskursija nuo Baltojo tilto iki skaityk Narautų. Soriukas, vėjas nupūtė žodžius, kai lėkiau pro tiltą ant 35.  \n",
+    "<video controls src=\"./videos/r2.mp4\"/>\n",
     "\n",
     "10:46 - legendinis Bolt Marketas, liūdnai pagarsėjęs savo virš 20 kilų mineralinio pakuotėm ant kurjerio kupros. Man tai dalampački, nes nes tekę yra ir 50 kg svorio aparatūras iki Kauno gabenti, tai tikrai nenumirčiau nuo to. Bet zakazą tai legendinį gavau - vežti Dvaro Pieno paką. Ir kaip po to nežvengt. Dar appsas parodė, kad klientas 10 eurų man už jį skoloj.\n",
     "\n",
@@ -81,15 +81,15 @@
     "\n",
     "11:21 - nu, blemba, laikosi dangus šiaip ne taip neapsimyžęs, pūslę įtraukęs. Paskui pasižiūriu ant radaro kas vyksta. Magija vapšče. Debesys eina visi link Vilniaus, bet palei jo kraštą sumažėja ir kažkur išnyksta kaip per kokį [Kate Bush Cloudbusting videką](https://www.youtube.com/watch?v=pllRW9wETzw), tik reversu atsuktą.\n",
     "\n",
-    "<img src=\"videos/m3.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/>\n",
+    "<img src=\"./videos/m3.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/>\n",
     "\n",
-    "[11:31](videos/r3.mp4) - daužo ne tik zakazais, bet ir dalbajobiškais adresais. Linkmenų g. 42 pasirodo buvo ne vienintelis. Priėjau išvadą, kad dalbanautikos pagrindų ir adresu Piromonto 7 galima taip pat pramokti.  \n",
-    "<video controls src=\"videos/r3.mp4\"/>\n",
+    "[11:31](./videos/r3.mp4) - daužo ne tik zakazais, bet ir dalbajobiškais adresais. Linkmenų g. 42 pasirodo buvo ne vienintelis. Priėjau išvadą, kad dalbanautikos pagrindų ir adresu Piromonto 7 galima taip pat pramokti.  \n",
+    "<video controls src=\"./videos/r3.mp4\"/>\n",
     "\n",
     "11:35 - čelindžas: ar apsišiks Didžioji Kinija. Vienąsyk įmušė rekordą - vėlavo zakazą pagamint 39 minutes. Nu davai, pabandom. Jei ką, tai kompą pasijungsiu ir bus pofig viskas.\n",
     "\n",
-    "[11:41](videos/v7.mp4) - kažkoks priepolis pasisakyt apie savo gimtinę jobtelėjo. Pradėjau nuo pareigūnų, paskui perėjau prie kelių tvarkymo. Pamiršau paminėti tik Lietuvos Konstituciją, nes pasinaudojau Europos teleportu į Konstitucijos prospektą. O ten legendiniai vaizdai - Savivaldybė ir prieš ją besimaudantys balandžiai, kuriems yra nusišikt ant politikos, o jei gerai pataiko, tai ir ant politikų. Vieno balanduko čiut Wolt kurjeris su dvyrka nenutėškė.  \n",
-    "<video controls src=\"videos/r7.mp4\"/>\n",
+    "[11:41](./videos/v7.mp4) - kažkoks priepolis pasisakyt apie savo gimtinę jobtelėjo. Pradėjau nuo pareigūnų, paskui perėjau prie kelių tvarkymo. Pamiršau paminėti tik Lietuvos Konstituciją, nes pasinaudojau Europos teleportu į Konstitucijos prospektą. O ten legendiniai vaizdai - Savivaldybė ir prieš ją besimaudantys balandžiai, kuriems yra nusišikt ant politikos, o jei gerai pataiko, tai ir ant politikų. Vieno balanduko čiut Wolt kurjeris su dvyrka nenutėškė.  \n",
+    "<video controls src=\"./videos/r7.mp4\"/>\n",
     "\n",
     "11:46 - pakliuvus į Didžiąją Kiniją perdėtas susirūpinimas, kad neišvartyčiau nieko su savo aparatu. Patikinau, saugus jis yra. Paskui iš karto dar susirūpino net du žmonės, kokiu vardu užsakymą atėjau atsiimti likus 4 min. iki duoto laiko. Žodžiu, nors akvariumas ir gražus, bet kol kas šūdmalystė vyksta. nu, zajac pagodi, ar apsišiks jie šįsyk. Neapsišiko. Atnešė laiku. \n",
     "\n",
@@ -97,16 +97,16 @@
     "\n",
     "11:59 - 34 nuvažiuoti kilai, kai nuvešiu zakazą bus trim eurų. Pagavau ant Tauro kalno 73 autą. Paveš iki kliento pusantro kilo. Kol kas normaliai viskas, svarbu Kinija neapsišiko.  \n",
     "\n",
-    "[12:18](videos/v6.mp4) - ekskursija po Paupio turgų ir garsiuosius jo suktinukus (gal teisingiau, garsujį turgaus serpantiną)  \n",
-    "<video controls src=\"videos/r6.mp4\"/>\n",
+    "[12:18](./videos/v6.mp4) - ekskursija po Paupio turgų ir garsiuosius jo suktinukus (gal teisingiau, garsujį turgaus serpantiną)  \n",
+    "<video controls src=\"./videos/r6.mp4\"/>\n",
     "\n",
     "12:33 - Burna House tam pačiam turguj. Labai skaniai viskas atrodo. Cepai, balandėliai, ryžiai visokie, bulvės. Verta pabandyt, kai mūšiai baigsis.  \n",
     "\n",
-    "[13:01](videos/v1.mp4) - nusikeliam į štatus, gudų Detroitą ir jo lauko prekybvietes uždaruose garduose.  \n",
-    "<video controls src=\"videos/v1.mp4\"/>\n",
+    "[13:01](./videos/v1.mp4) - nusikeliam į štatus, gudų Detroitą ir jo lauko prekybvietes uždaruose garduose.  \n",
+    "<video controls src=\"./videos/v1.mp4\"/>\n",
     "\n",
-    "[13:20](videos/v8.mp4) - liūdi vandalų nugriautas Cvirka, o pašonėje žmonės turtingai ir gražiai gyvena. Čilas visiškas.  \n",
-    "<video controls src=\"videos/v8.mp4\"/>\n",
+    "[13:20](./videos/v8.mp4) - liūdi vandalų nugriautas Cvirka, o pašonėje žmonės turtingai ir gražiai gyvena. Čilas visiškas.  \n",
+    "<video controls src=\"./videos/v8.mp4\"/>\n",
     "\n",
     "13:33 - nuvažiuoti 52 kilai jau. Uždarbis 48€ + 4€ arbatos. Ant rato grubiai paėmus 4 su puse valandos stoviu. Batarkės dar kokiem 15 kilų užteks.  \n",
     "\n",
@@ -114,17 +114,17 @@
     "\n",
     "13:50 - pasivažinėsim dabar trūlu Narbuto gatve į kalną, sutaupysim tris kilus batarkės. Bus zajabys - strigsim kamščiuose, o takas pėstiesiems kelio pakrašty prieš Laisvės prospektą, kiek atsimenu iš po žiemos, chujovas.  \n",
     "\n",
-    "[14:01](videos/v5.mp4) - nieko negirdžiu, į radiją zakazą vežu.  \n",
-    "<video controls src=\"videos/v5.mp4\"/>\n",
+    "[14:01](./videos/v5.mp4) - nieko negirdžiu, į radiją zakazą vežu.  \n",
+    "<video controls src=\"./videos/v5.mp4\"/>\n",
     "\n",
-    "[14:02](videos/v3.mp4) - nieko ypatingo tam radijuje  \n",
-    "<video controls src=\"videos/v3.mp4\"/>\n",
+    "[14:02](./videos/v3.mp4) - nieko ypatingo tam radijuje  \n",
+    "<video controls src=\"./videos/v3.mp4\"/>\n",
     "\n",
-    "[14:04](videos/v2.mp4) - bėdavot pradedu pakeliui link Pilaitės mako.  \n",
-    "<video controls src=\"videos/v2.mp4\"/>\n",
+    "[14:04](./videos/v2.mp4) - bėdavot pradedu pakeliui link Pilaitės mako.  \n",
+    "<video controls src=\"./videos/v2.mp4\"/>\n",
     "\n",
-    "[14:10](videos/v4.mp4) - čardžinu batarkę pas Donaldą. Tas tai visada vėluoja kaip taisyklė, tai ir prisėdau pailsėti ir batarkę bent kokias 10 min pakrauti. Tiesa, po tokio darbo - vėl alkanas ir pavargęs, nesvarbu, kad pietūs valgyti prieš 5 val. Apie vidurnaktį turėsiu tuos savo 120 eurų, bet pizduliai bus.  \n",
-    "<video controls src=\"videos/v4.mp4\"/>\n",
+    "[14:10](./videos/v4.mp4) - čardžinu batarkę pas Donaldą. Tas tai visada vėluoja kaip taisyklė, tai ir prisėdau pailsėti ir batarkę bent kokias 10 min pakrauti. Tiesa, po tokio darbo - vėl alkanas ir pavargęs, nesvarbu, kad pietūs valgyti prieš 5 val. Apie vidurnaktį turėsiu tuos savo 120 eurų, bet pizduliai bus.  \n",
+    "<video controls src=\"./videos/v4.mp4\"/>\n",
     "\n",
     "14:24 - lipt į trūlą ties įsukimu į Justinikes, kurio dar net nesimato, ir sutaupyt 3km batarkės ar vėluoti 5 min. žmogui atvežti zkz. Px, davai į trūlą.  \n",
     "\n",
@@ -187,7 +187,7 @@
     "23:30 - bevažiuojant autu daeina mintis iki smegeninės, kad skolingas gaidį Adaptų Ir Daunų & co šaikai esu.  \n",
     "\n",
     "23:34 - intikas autike buvo, tai tik dėl to ir pavyko iš savo kompo gaidį įkelti likus 10 sekundžių iki stotelės.  \n",
-    "<img src=\"videos/g.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/>\n",
+    "<img src=\"./videos/g.jpg\" alt=\"Drawing\" style=\"width: 250px;\"/>\n",
     "\n",
     "23:35 - joks zakazas vapše nekrenta - feilas žodžiu visiškas. Stoviu kaip debilas stotelėj. Autas pirmas gie iki centro tik už 4 min atvaro.\n",
     "\n",
@@ -203,45 +203,45 @@
     "\n",
     "00:45 - Karma strikes again užtrukus tik penkiolika minučių. Darsyk važiuojant toj vietoj, kur vienam gale stotis, kitam gale Kablys (kas čia per rajonas, kas pasakys?) dar viena mergyčka iššoka mauglio balsu. Aš sustojęs sakau: kas atsitiko? Sako, nieko, o nori, kad kažkas atsitiktų? Nu gal, sakau. Davė man hugs kaip kažkokį pasąmoninį revanšą. Kaip tai atsitinka, neklauskit. Vienas apsisvaiginęs yra papildas kitam apsisvaiginusiam figznaet kokiu būdu. Karma is a bitch.\n",
     "\n",
-    "[01:07](videos/r4.mp4) - pagaliau ir aš gavau po normalų barą pagastroliuoti. Jei ne kitas žanras, būtų rimtas to ano klubo, kur dabar mano mergina, konkurentas. Tiek kartų per žiemą jau mano šikną nuo šalčio gelbėjo, kai atsisėsdavau tenais ant fotelio prieš teliką. Tiek kartų stiprybės man nemokamai dalijo su normalia muzika, iš kurios visiems Vilniaus barams pasimokyt belieka. Mr. Pub kožną dieną miręs būna, o pažiūrėkit, kas penktadienį darosi. Tik niekas neįsivaizduoja, ką reiškia ant tarnybos būti su 120€ čelindžu ir barus matyti iš kitos barikadų pusės.  \n",
-    "<video controls src=\"videos/r4.mp4\"/>\n",
+    "[01:07](./videos/r4.mp4) - pagaliau ir aš gavau po normalų barą pagastroliuoti. Jei ne kitas žanras, būtų rimtas to ano klubo, kur dabar mano mergina, konkurentas. Tiek kartų per žiemą jau mano šikną nuo šalčio gelbėjo, kai atsisėsdavau tenais ant fotelio prieš teliką. Tiek kartų stiprybės man nemokamai dalijo su normalia muzika, iš kurios visiems Vilniaus barams pasimokyt belieka. Mr. Pub kožną dieną miręs būna, o pažiūrėkit, kas penktadienį darosi. Tik niekas neįsivaizduoja, ką reiškia ant tarnybos būti su 120€ čelindžu ir barus matyti iš kitos barikadų pusės.  \n",
+    "<video controls src=\"./videos/r4.mp4\"/>\n",
     "\n",
     "01:10 - myžt noriu. Per tuos pijokus reik laukt penkias minutes eilėj iki tūliko ir vėluot picą pasiimt. Kol pagaliau patenku, groja [Michael Jackson - Billie Jean](https://www.youtube.com/watch?v=Zi_XLOBDo_Y).\n",
     "\n",
-    "[01:19](videos/r5.mp4) - ble, ir aš išgert norėčiau, bet deja šįvakar tenka apsiriboti tik tutorialais, kaip sukišt picą į tašę.  \n",
-    "<video controls src=\"videos/r5.mp4\"/>\n",
+    "[01:19](./videos/r5.mp4) - ble, ir aš išgert norėčiau, bet deja šįvakar tenka apsiriboti tik tutorialais, kaip sukišt picą į tašę.  \n",
+    "<video controls src=\"./videos/r5.mp4\"/>\n",
     "\n",
-    "[01:23](videos/r6.mp4) - trumpas pamokslas apie besikeičiantį miestą po vidurnakčio amžina atilsį Cvirkos vietoje, prieš buvusį pamiklą.  \n",
-    "<video controls src=\"videos/r6.mp4\"/>\n",
+    "[01:23](./videos/r6.mp4) - trumpas pamokslas apie besikeičiantį miestą po vidurnakčio amžina atilsį Cvirkos vietoje, prieš buvusį pamiklą.  \n",
+    "<video controls src=\"./videos/r6.mp4\"/>\n",
     "\n",
     "01:40 - tie, kas nori pasikačialint, gali pabandyt užnešt 17 kg vienaratį tais laiptais, kur prie stoties virš bėgių yra pėsčiųjų praėjimas. Į abidvi puses - prieš zakazo pristymą ir po.\n",
     "\n",
     "01:44 - vsio, palei stotį liko tik 7 - 8 kilai batarkės. Iki namų jau net neužteks. Užsidirbt pavyko tik 105€. Vienintelė išeitis dabar yra varyti pas Donaldą ir bandyt pasijungt laidą tokioj vienos slaptoj vietoj, jei ji užimta nebus, ir bandyt nušaut kokį zakazą, kur link mano chatų bus. O galėjo būt naktis pas mano meilę. Tada 20€ jau būtų padaryta, nes nereiktų tįstis kaip dūchui tuos kilus iki namų su vos pavelkančia batarke. Dar gaučiau padirbti ir galėčiau varyti poilsio laimingas.\n",
     "\n",
-    "[01:51](videos/r7.mp4) - atvarius prie mako dašunta, kad jis pavirto naktiniu klubu ir jokios naudos iš geriau nesitikėti.  \n",
-    "<video controls src=\"videos/r7.mp4\"/>\n",
+    "[01:51](./videos/r7.mp4) - atvarius prie mako dašunta, kad jis pavirto naktiniu klubu ir jokios naudos iš geriau nesitikėti.  \n",
+    "<video controls src=\"./videos/r7.mp4\"/>\n",
     "\n",
-    "[01:53](videos/r8.mp4) - prieš atvarant darsyk į Mr. Pub darsyk jobtelėjo sentimentai apie mažą namą ant kalvos ir dalbajobišką dalbajobiško klubo apsaugą. Jau pizė darosi su bararke, avariniu būdu noriu rozetę surast. Nors pala...  \n",
-    "<video controls src=\"videos/r8.mp4\"/>\n",
+    "[01:53](./videos/r8.mp4) - prieš atvarant darsyk į Mr. Pub darsyk jobtelėjo sentimentai apie mažą namą ant kalvos ir dalbajobišką dalbajobiško klubo apsaugą. Jau pizė darosi su bararke, avariniu būdu noriu rozetę surast. Nors pala...  \n",
+    "<video controls src=\"./videos/r8.mp4\"/>\n",
     "\n",
-    "[01:54](videos/r9.mp4) - atkreipkit dėmesį į nakties personą. Tai tik pradžia.  \n",
-    "<video controls src=\"videos/r9.mp4\"/>\n",
+    "[01:54](./videos/r9.mp4) - atkreipkit dėmesį į nakties personą. Tai tik pradžia.  \n",
+    "<video controls src=\"./videos/r9.mp4\"/>\n",
     "\n",
-    "[01:57](videos/r10.mp4) - elementaru, Vatsonai.  \n",
-    "<video controls src=\"videos/r10.mp4\"/>\n",
+    "[01:57](./videos/r10.mp4) - elementaru, Vatsonai.  \n",
+    "<video controls src=\"./videos/r10.mp4\"/>\n",
     "\n",
-    "[02:00](videos/r11.mp4) - dar elementariau.  \n",
-    "<video controls src=\"videos/r11.mp4\"/>\n",
+    "[02:00](./videos/r11.mp4) - dar elementariau.  \n",
+    "<video controls src=\"./videos/r11.mp4\"/>\n",
     "\n",
     "02:04 - Prie tos vietos, iš kur aš picas imu, atsistojus ta dūchiška apsauga, kuri šiaip turėtų prie savo šūdbario budėti, kur laiptai į kitą pusę. Da gerai, kad su Bolt tašė įleidžia mane vapšče, nes toks dreskodas su jokiu feiskontrolu nesuderinamas. Vyksta razborkės. Kažkas kažką varo lauk. Kažkas kažką propaguoja. Siūlo daryt ką nori, bet neįleis į tą patį Mr. Pub kažkokios panos, nors jiem priklauso tik visokius per mažai pripisusius už savo šūdbario durų laikyt tiktais. Mr. Pub niekad nebuvo ir nebus administruojamas tų dūchų, tegu išsičiuchina. Klausiu: o tai prie Mr. Pub irgi apsauga stovi? Sako, visada čia stovėjo. Bauda maksimali žodžiu. Eina švilpt, čia rimtai jie stumia. Tie patys daunai kažkada man pradėjo vardyti psichotropines medžiagas, kurias aš vartoju kaip įrodymą, kad į jų malalietkų klubą manęs nepraleis. Kurva, šitie kirviai dalbajobų žurnale būtų top reitinguose, ne tai, kad juokinga iš jų yra, norisi tik atvaryt ir kokią ant jų nesąmonę užstumt, kiek atsarga leidžia.\n",
     "\n",
-    "[02:05](videos/r12.mp4) - Kaip ten bebūtų, pats Mr. Pub mano širdyje visada bus man svetingas ir įkvepiantis mane net gi dvasiškai. Ta proga pirmą cigarą šiandien susisukau parūkyti. Dauž zakazus belenkaip, kaip dienos metu. Vieno tik gaila - kad dabar kaip dūchas su nusėdusia batarke krušuosi.  \n",
-    "<video controls src=\"videos/r12.mp4\"/>\n",
+    "[02:05](./videos/r12.mp4) - Kaip ten bebūtų, pats Mr. Pub mano širdyje visada bus man svetingas ir įkvepiantis mane net gi dvasiškai. Ta proga pirmą cigarą šiandien susisukau parūkyti. Dauž zakazus belenkaip, kaip dienos metu. Vieno tik gaila - kad dabar kaip dūchas su nusėdusia batarke krušuosi.  \n",
+    "<video controls src=\"./videos/r12.mp4\"/>\n",
     "\n",
     "02:06 - Kas yra didžiausias prikolas, kad prie jokios rozetės tie dalbajobai nestovi. Nes rozetė yra ir lauke, ir viduj iš karto prie durų ir Mr. Pube prie mylimo foteliuko su teliku. Ir vapšče [legendinis achujienas bytas](https://www.youtube.com/watch?v=7YvAYIJSSZY) groja. Biški negerai, kad tą picą paimt reikia, taip tai klausyčiau iki paryčių visko. Ble, kai pagalvoji, tai nors paimk, užeik į šitą barą, nusišazamink visus bytus ir karočia visas plokšteles nusipirk iš to, ką jie groja. Alternatyva tam etatiniam barui, kur mano meilė dabar tūsina darosi (sori, kartojuosi).  \n",
     "\n",
-    "[02:11](videos/r13.mp4) - tas pats seniukas, nakties persona, garo paduoda kaip reikalas. Kiek laiko tam prireikė, kad jis tūsą po atviru dangum surengtų, gausumu galintį net ir su Mr. Pub pasivaržyti, patys matot. Štai, kur tikrasis mano gimtinės didvyris.  \n",
-    "<video controls src=\"videos/r13.mp4\"/>\n",
+    "[02:11](./videos/r13.mp4) - tas pats seniukas, nakties persona, garo paduoda kaip reikalas. Kiek laiko tam prireikė, kad jis tūsą po atviru dangum surengtų, gausumu galintį net ir su Mr. Pub pasivaržyti, patys matot. Štai, kur tikrasis mano gimtinės didvyris.  \n",
+    "<video controls src=\"./videos/r13.mp4\"/>\n",
     "\n",
     "02:21 - įteiktas paskutinis zakazas į mano namų pusę. Per visą dieną dauguma klientų buvo labai normalūs, su šypsenom veiduose. Kiti susilaikydavo, džiaugsmo nerodė. Dažnas vien su trauzai duris atidarydavo. Nakties metu buvo ir tokių, kurie verčia laukti penkias minutes, kol išeis į kiemą patamsy. O mane puola egzistenciniai klausimai - mano meilė ir aš - priešingose barikadų pusėse. Sakė grįš paryčiais. O taip norėjau palaikymo šį nelengvą momentą.\n",
     "\n",
