Updqate of new info

--- a/journey_remarks/nauja_platforma.ipynb
+++ b/journey_remarks/nauja_platforma.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Naktinio Saimono nuomonė\n",
+    "## Naktinio Saimono nuomonė\n",
     "\n",
     "Jei kuriame platformą, tai ji turi būti kuriama iš keturių dalių: app kurjeriui, app klientui, app restoranui ir app supportui lygiai taip pat, kaip ir Bolt/Wolt platformos. Turi būti suplanuota, kuo kiekviena iš šių dalių bus konkurencinga palyginus su Bolt/Wolt konkurentais, jos turi sudaryti darnią ekosistemą. Taip pat, paėmus pavyzdį iš Wolt, leidžiamas naujienlaiškis arba kokia nors kita nuoroda į tips & tricks, vertingus kurjeriui.\n",
     "\n",
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kitos nereikšmingos pastabos\n",
+    "## Kitos nereikšmingos pastabos\n",
     "* Nebaigtas transporto saitas\n",
     "* Nebaigtas dietary saitas\n",
     "* Product strategy\n",
