--- a/journey_remarks/nauja_platforma.ipynb
+++ b/journey_remarks/nauja_platforma.ipynb
@@ -87,12 +87,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kitos nereikšmingos pastabos\n",
-    "* Nebaigtas transporto saitas\n",
-    "* Nebaigtas dietary saitas\n",
-    "* Product strategy\n",
-    "* Success story of Bolt\n",
-    "* A short documentary about the legendary best PIZZA delivery man Biller Meier"
+    "## Kitos nuorodos apie produkto kūrimą\n",
+    "* [Pavyzdys, kaip galėtų atrodyti kurjeriams pritaikyto transporto analizė](https://loijord.github.io/EUC/](https://loijord.github.io/EUC/)\n",
+    "* Nebaigtas saitas apie energetinės vertė gaminamiems receptams paskaičiavimą ir tips & tricks, kaip organizmas įsisavina medžiagas [reikia sukelti į GitHub]\n",
+    "* [Paskaitos apie produkto strategiją](https://www.linkedin.com/learning/product-management-building-a-product-strategy)\n",
+    "* [Kaip Bolt pavyko sukurti produktą per 6 mėnesius?](https://pavelzubarev.medium.com/bolt-food-designing-a-food-delivery-service-for-a-unicorn-company-3b93680778a0)"
    ]
   }
  ],
